--- a/src/webpack-sample/src/style.css
+++ b/src/webpack-sample/src/style.css
@@ -1,3 +1,15 @@
+@font-face {
+    font-family: 'MyFont';
+    src:
+        url('./fontawesome-webfont.woff') format('woff'),
+        url('./fontawesome-webfont.woff2') format('woff2');
+    font-weight: 600;
+    font-style: normal;
+}
+
 .hello {
     color: red;
+    background-image: url('./icon.jpg');
+    background-repeat: no-repeat;
+    font-family: 'MyFont';
 }
